istio/traffic-management/istio-ingress.yaml
###########################################################################
# Ingress resource (gateway)
##########################################################################

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-gateway
  annotations:
    kubernetes.io/ingress.class: "istio"
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Exact
        backend:
          service:
            name: frontend-service
            port:
              number: 5000
      - path: /details
        pathType: Prefix
        backend:
          service:
            name: details-service
            port:
              number: 7777
      - path: /payment
        pathType: Exact
        backend:
          service:
            name: payment-service
            port:
              number: 8888
      - path: /reviews
        pathType: Prefix
        backend:
          service:
            name: reviews-service
            port:
              number: 9999
