istio/traffic-management/virtual-service-abtesting.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ab-testing-enduser
spec:
  hosts:
  - frontend-service.default.svc.cluster.local
  http:
  - match:
    - uri:
        prefix: /set_end_user
    - headers:
        End-User:
          exact: yuya
    route:
    - destination:
        host: reviews-service.default.svc.cluster.local
        subset: v1
  - route:
    - destination:
        host: reviews-service.default.svc.cluster.local
        subset: v3
